--- a/e-commerce project/project.ipynb
+++ b/e-commerce project/project.ipynb
@@ -13,113 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>is_mobile</th>\n",
-       "      <th>n_products_viewed</th>\n",
-       "      <th>visit_duration</th>\n",
-       "      <th>is_returning_visitor</th>\n",
-       "      <th>time_of_day</th>\n",
-       "      <th>user_action</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.657510</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.568571</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.042246</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.659793</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.014745</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   is_mobile  n_products_viewed  visit_duration  is_returning_visitor  \\\n",
-       "0          1                  0        0.657510                     0   \n",
-       "1          1                  1        0.568571                     0   \n",
-       "2          1                  0        0.042246                     1   \n",
-       "3          1                  1        1.659793                     1   \n",
-       "4          0                  1        2.014745                     1   \n",
-       "\n",
-       "   time_of_day  user_action  \n",
-       "0            3            0  \n",
-       "1            2            1  \n",
-       "2            1            0  \n",
-       "3            1            2  \n",
-       "4            1            2  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('ecommerce_data.csv')\n",
+    "def get_data():\n",
+    "    df = pd.read_csv('ecommerce_data.csv') #Get the data\n",
+    "    data = df.as_matrix()                  #Transform the data into a nunpy array\n",
+    "    #Split the data   \n",
+    "    X = data[:, :-1]\n",
+    "    Y = data[:,-1]\n",
+    "    #Let's normalize the numerical columns\n",
+    "    X[:,1] = (X[:,1] -  X[:,1].mean()/X[:,1].std())\n",
+    "    X[:,2] = (X[:,2] -  X[:,2].mean()/X[:,2].std())\n",
     "\n",
-    "df.head()"
+    "    #Let's work on the categorical column \n",
+    "    N, D = X.shape()\n",
+    "    X2 = np.zeros((N, D+3)) #d+3 bc we have 4 different categorical values\n",
+    "    X2[:,0:(D-1)] = X[:,0:(D-1)]\n",
+    "    #Using hot key encoding\n",
+    "    for n in range(N):\n",
+    "        time_day = int(X[n,D-1])\n",
+    "        X2[n, time_day+D-1]= 1\n",
+    "    Z = np.zeros((N,4))\n",
+    "    Z[np.arange(N), X[:,D-1].astype(np.int32)] = 1\n",
+    "    assert(np.abs(X2[:,-4:]- Z).sum()<10e-10)\n",
+    "    return X2, Y\n",
+    "\n",
+    "def get_binary_data():\n",
+    "    X, Y = get_data() #To filter only taking classes 0 and 1\n",
+    "    X2 = X[Y <= 1]\n",
+    "    Y2 = Y[Y <= 1]\n",
+    "    return X2, Y2\n"
    ]
   }
  ],
