Added a way to predict but not that good

--- a/e-commerce project/project.ipynb
+++ b/e-commerce project/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,38 +13,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_data():\n",
-    "    df = pd.read_csv('ecommerce_data.csv') #Get the data\n",
-    "    data = df.as_matrix()                  #Transform the data into a nunpy array\n",
-    "    #Split the data   \n",
-    "    X = data[:, :-1]\n",
-    "    Y = data[:,-1]\n",
-    "    #Let's normalize the numerical columns\n",
-    "    X[:,1] = (X[:,1] -  X[:,1].mean()/X[:,1].std())\n",
-    "    X[:,2] = (X[:,2] -  X[:,2].mean()/X[:,2].std())\n",
+    "  df = pd.read_csv('ecommerce_data.csv')\n",
+    "  # easier to work with numpy array\n",
+    "  data = df.values\n",
+    "  # shuffle it\n",
+    "  np.random.shuffle(data)\n",
     "\n",
-    "    #Let's work on the categorical column \n",
-    "    N, D = X.shape()\n",
-    "    X2 = np.zeros((N, D+3)) #d+3 bc we have 4 different categorical values\n",
-    "    X2[:,0:(D-1)] = X[:,0:(D-1)]\n",
-    "    #Using hot key encoding\n",
-    "    for n in range(N):\n",
-    "        time_day = int(X[n,D-1])\n",
-    "        X2[n, time_day+D-1]= 1\n",
-    "    Z = np.zeros((N,4))\n",
-    "    Z[np.arange(N), X[:,D-1].astype(np.int32)] = 1\n",
-    "    assert(np.abs(X2[:,-4:]- Z).sum()<10e-10)\n",
-    "    return X2, Y\n",
+    "  # split features and labels\n",
+    "  X = data[:,:-1]\n",
+    "  Y = data[:,-1].astype(np.int32)\n",
+    "\n",
+    "  # one-hot encode the categorical data\n",
+    "  # create a new matrix X2 with the correct number of columns\n",
+    "  N, D = X.shape\n",
+    "  X2 = np.zeros((N, D+3))\n",
+    "  X2[:,0:(D-1)] = X[:,0:(D-1)] # non-categorical\n",
+    "\n",
+    "  # one-hot\n",
+    "  for n in range(N):\n",
+    "      t = int(X[n,D-1])\n",
+    "      X2[n,t+D-1] = 1\n",
+    "\n",
+    "  # assign X2 back to X, since we don't need original anymore\n",
+    "  X = X2\n",
+    "\n",
+    "  # split train and test\n",
+    "  Xtrain = X[:-100]\n",
+    "  Ytrain = Y[:-100]\n",
+    "  Xtest = X[-100:]\n",
+    "  Ytest = Y[-100:]\n",
+    "\n",
+    "  # normalize columns 1 and 2\n",
+    "  for i in (1, 2):\n",
+    "    m = Xtrain[:,i].mean()\n",
+    "    s = Xtrain[:,i].std()\n",
+    "    Xtrain[:,i] = (Xtrain[:,i] - m) / s\n",
+    "    Xtest[:,i] = (Xtest[:,i] - m) / s\n",
+    "\n",
+    "  return Xtrain, Ytrain, Xtest, Ytest\n",
+    "\n",
     "\n",
     "def get_binary_data():\n",
-    "    X, Y = get_data() #To filter only taking classes 0 and 1\n",
-    "    X2 = X[Y <= 1]\n",
-    "    Y2 = Y[Y <= 1]\n",
-    "    return X2, Y2\n"
+    "  # return only the data from the first 2 classes\n",
+    "  Xtrain, Ytrain, Xtest, Ytest = get_data()\n",
+    "  X2train = Xtrain[Ytrain <= 1]\n",
+    "  Y2train = Ytrain[Ytrain <= 1]\n",
+    "  X2test = Xtest[Ytest <= 1]\n",
+    "  Y2test = Ytest[Ytest <= 1]\n",
+    "  return X2train, Y2train, X2test, Y2test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, Y_train, X_test, Y_test = get_binary_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.4503105590062112\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = X_train.shape[1]\n",
+    "W = np.random.randn(D)\n",
+    "b = 0 # bias term\n",
+    "\n",
+    "# make predictions\n",
+    "def sigmoid(a):\n",
+    "    return 1 / (1 + np.exp(-a))\n",
+    "\n",
+    "def forward(X, W, b):\n",
+    "    return sigmoid(X.dot(W) + b)\n",
+    "\n",
+    "P_Y_given_X = forward(X_train, W, b)\n",
+    "predictions = np.round(P_Y_given_X)\n",
+    "\n",
+    "# calculate the accuracy\n",
+    "def classification_rate(Y, P):\n",
+    "    return np.mean(Y == P)\n",
+    "\n",
+    "print(\"Score:\", classification_rate(Y_train, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not that good, but this means that we need a way to find the correct values of $w_i$"
    ]
   }
  ],
